# src/MooBank.Api/openapi-v1.json
@@ -9094,7 +9094,8 @@
           "finalBalanceInTodaysDollars",
           "lifeExpectancyYear",
           "totalPension",
-          "sustainableIncomeInTodaysDollars"
+          "sustainableIncomeInTodaysDollars",
+          "pensionStartsBelowInTodaysDollars"
         ],
         "type": "object",
         "properties": {
@@ -9156,6 +9157,10 @@
           "sustainableIncomeInTodaysDollars": {
             "type": "number",
             "format": "double"
+          },
+          "pensionStartsBelowInTodaysDollars": {
+            "type": "number",
+            "format": "double"
           }
         }
       },
@@ -9175,8 +9180,6 @@
           "totalIncome",
           "totalIncomeInTodaysDollars",
           "pensionInTodaysDollars",
-          "pensionAssetsCutOff",
-          "pensionAssetsCutOffInTodaysDollars",
           "members"
         ],
         "type": "object",
@@ -9233,14 +9236,6 @@
             "format": "double"
           },
           "pensionInTodaysDollars": {
-            "type": "number",
-            "format": "double"
-          },
-          "pensionAssetsCutOff": {
-            "type": "number",
-            "format": "double"
-          },
-          "pensionAssetsCutOffInTodaysDollars": {
             "type": "number",
             "format": "double"
           },
